完善说明文档
完善说明文档

--- a/src/test/resources/conf/elasticsearch.properties
+++ b/src/test/resources/conf/elasticsearch.properties
@@ -13,6 +13,17 @@ elasticsearch.ttl=2d
 elasticsearch.showTemplate=true
 #elasticsearch.serialize=com.ai.blackcat.kafka.ElasticSearchJSONEventSerializer
 
+trace.elasticsearch.client=rest
+trace.elasticUser=elastic
+trace.elasticPassword=changeme
+trace.elasticsearch.transport.hostNames=192.168.0.2:9300
+trace.elasticsearch.rest.hostNames=192.168.0.2:9200
+trace.elasticsearch.dateFormat=yyyy.MM.dd
+trace.elasticsearch.timeZone=Asia/Shanghai
+trace.elasticsearch.ttl=2d
+trace.elasticsearch.showTemplate=true
+#trace.elasticsearch.serialize=com.ai.blackcat.kafka.ElasticSearchJSONEventSerializer
+
 http.timeoutConnection = 40000
 http.timeoutSocket = 40000
 http.connectionRequestTimeout=40000
