--- a/build.gradle
+++ b/build.gradle
@@ -114,12 +114,20 @@ configure(allprojects) { project ->
 	}
 
 
-
+	configurations {
+		//屏蔽log4j
+	    compile.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+	}
 	dependencies {
 		testCompile 'junit:junit:4.12'
-
+		//采用log4j2记录日志
 		compile(
-				[group: 'com.bbossgroups.plugins', name: 'bboss-plugin-elasticsearch', version: "${bboss_es_version}", transitive: true]
+			[group: 'org.apache.logging.log4j', name: 'log4j-api', version: "${log4j2_version}", transitive: false],
+	        [group: 'org.apache.logging.log4j', name: 'log4j-core', version: "${log4j2_version}", transitive: false],        
+			[group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "${log4j2_version}", transitive: true]
+		)
+		compile(
+				[group: 'com.bbossgroups.plugins', name: 'bboss-elasticsearch-rest', version: "${bboss_es_version}", transitive: true]
 		)
 		runtime(
 				[group: 'com.bbossgroups', name: 'bboss-rt', version: "${bboss_version}", transitive: false],
