--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 PROJ_GROUP=org.frameworkset.elasticsearchdemo
 PROJ_VERSION=1.0.0
 
-bboss_version=5.0.3.7.3
-bboss_es_version=5.0.3.7.3
+bboss_version=5.0.3.7.4
+bboss_es_version=5.0.3.7.4
 jacksonversion=2.9.1
-
+log4j2_version=2.8.2
 skipTest=true  
 PROJ_WEBSITEURL=http://www.bbossgroups.com
 PROJ_ISSUETRACKERURL=https://github.com/bbossgroups/elasticsearchdemo/issues
