--- a/src/test/resources/conf/elasticsearch.properties
+++ b/src/test/resources/conf/elasticsearch.properties
@@ -7,7 +7,7 @@ elasticsearch.dateFormat=yyyy.MM.dd
 elasticsearch.timeZone=Asia/Shanghai
 elasticsearch.ttl=2d
 elasticsearch.showTemplate=true
-
+elasticsearch.discoverHost=true
 
 http.timeoutConnection = 40000
 http.timeoutSocket = 40000
