拼音检索测试用例添加
拼音检索测试用例添加

--- a/src/test/resources/conf/elasticsearch.properties
+++ b/src/test/resources/conf/elasticsearch.properties
@@ -2,12 +2,12 @@
 elasticUser=elastic
 elasticPassword=changeme
    
-elasticsearch.rest.hostNames=127.0.0.1:9200
+elasticsearch.rest.hostNames=10.1.236.88:9200
 elasticsearch.dateFormat=yyyy.MM.dd
 elasticsearch.timeZone=Asia/Shanghai
 elasticsearch.ttl=2d
 elasticsearch.showTemplate=true
-elasticsearch.discoverHost=true
+elasticsearch.discoverHost=false
 
 http.timeoutConnection = 40000
 http.timeoutSocket = 40000
