完善拼音测试用例
完善拼音测试用例

--- a/src/test/resources/conf/elasticsearch.properties
+++ b/src/test/resources/conf/elasticsearch.properties
@@ -2,12 +2,14 @@
 elasticUser=elastic
 elasticPassword=changeme
    
-elasticsearch.rest.hostNames=10.1.236.88:9200
+#elasticsearch.rest.hostNames=10.1.236.88:9200
+#elasticsearch.rest.hostNames=127.0.0.1:9200
+elasticsearch.rest.hostNames=10.180.211.27:9400,10.180.211.27:9401,10.180.211.27:9402
 elasticsearch.dateFormat=yyyy.MM.dd
 elasticsearch.timeZone=Asia/Shanghai
 elasticsearch.ttl=2d
 elasticsearch.showTemplate=true
-elasticsearch.discoverHost=false
+elasticsearch.discoverHost=true
 
 http.timeoutConnection = 40000
 http.timeoutSocket = 40000
