修改启动指令，任务运行所需的jvm配置通过jvm.option进行设置
修改启动指令，任务运行所需的jvm配置通过jvm.option进行设置

--- a/build.gradle
+++ b/build.gradle
@@ -156,8 +156,7 @@ configure(allprojects) { project ->
 			{
 				expand(
 						bboss_version:"${bboss_version}",
-                        project:"${project.name}",
-                        vm:"-Xms512m -Xmx512m -Xmn256m -XX:PermSize=128M -XX:MaxPermSize=128M"
+                        project:"${project.name}"
 						)
 
 			}		
