--- a/src/test/resources/conf/elasticsearch.properties
+++ b/src/test/resources/conf/elasticsearch.properties
@@ -3,14 +3,14 @@ elasticUser=elastic
 elasticPassword=changeme
    
 #elasticsearch.rest.hostNames=10.1.236.88:9200
-#elasticsearch.rest.hostNames=10.21.20.168:9200
-elasticsearch.rest.hostNames=127.0.0.1:9200
+elasticsearch.rest.hostNames=http://10.21.20.168:9200
+#elasticsearch.rest.hostNames=127.0.0.1:9200
 #elasticsearch.rest.hostNames=10.180.211.27:9280,10.180.211.27:9281,10.180.211.27:9282
 elasticsearch.dateFormat=yyyy.MM.dd
 elasticsearch.timeZone=Asia/Shanghai
 elasticsearch.ttl=2d
 elasticsearch.showTemplate=true
-elasticsearch.discoverHost=true
+elasticsearch.discoverHost=false
 
 http.timeoutConnection = 400000
 http.timeoutSocket = 400000
@@ -20,4 +20,8 @@ http.maxLineLength = -1
 http.maxHeaderCount = 200
 http.maxTotal = 400
 http.defaultMaxPerRoute = 200
+http.soReuseAddress = false
+http.soKeepAlive = false
+http.timeToLive = 3600000
+http.keepAlive = 3600000
 
