--- a/build.gradle
+++ b/build.gradle
@@ -122,14 +122,17 @@ configure(allprojects) { project ->
 		testCompile 'junit:junit:4.12'
 		//采用log4j2记录日志
 		compile(
+				[group: 'com.bbossgroups', name: 'bboss-persistent', version: "${bboss_version}", transitive: true],
 			[group: 'org.apache.logging.log4j', name: 'log4j-api', version: "${log4j2_version}", transitive: false],
 	        [group: 'org.apache.logging.log4j', name: 'log4j-core', version: "${log4j2_version}", transitive: false],        
 			[group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "${log4j2_version}", transitive: true],
 				[group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "${log4j2_version}", transitive: true]
 		)
 		compile(
-				[group: 'com.bbossgroups.plugins', name: 'bboss-elasticsearch-rest', version: "${bboss_es_version}", transitive: true]
+				[group: 'com.bbossgroups.plugins', name: 'bboss-elasticsearch-rest', version: "${bboss_es_version}", transitive: true],
+				//[group: 'org.elasticsearch.plugin.jdbc', name: 'jdbc', version: "6.3.0", transitive: true]
 		)
+
 		runtime(
 				[group: 'com.bbossgroups', name: 'bboss-rt', version: "${bboss_version}", transitive: false],
 		)
