--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+def profile = System.getProperty("profile") ?: "dev"
+println(profile)
 
 
 
@@ -93,10 +95,20 @@ configure(allprojects) { project ->
 				srcDir 'src/main/java'
 
 			}
-			resources {
-				srcDir 'src/main/resources'
-				srcDir 'src/main/java'  exclude '**/*.java'
+			if(profile == "dev") {
+				resources {
+					srcDir 'src/main/resources'
+					srcDir 'src/main/java' exclude '**/*.java'
+				}
 			}
+			else{
+				resources {
+					srcDir 'src/main/resources' exclude '**/*'
+					srcDir 'src/main/java' exclude '**/*.java'
+				}
+			}
+
+
 //			compileClasspath = configurations.compile + configurations.runtime
 		}
 		test {
@@ -112,7 +124,6 @@ configure(allprojects) { project ->
 		}
 
 	}
-
 
 	configurations {
 		//屏蔽log4j
@@ -172,7 +183,7 @@ configure(allprojects) { project ->
 
 	}
 	task copyResourcesfiles(type: Sync )  {
-		from fileTree(dir: 'src/test/resources')
+		from fileTree(dir: 'src/main/resources')
 		filteringCharset = 'UTF-8'
 		into 'build/dist/resources'
 	}
