修改slice scroll/scroll parallel并行查询bug：数据重复问题修复

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+mainclass=org.frameworkset.elasticsearch.UpdateSetting
+max_result_window=15000
+
 ##多集群配置样例，如果需要做多集群配置，请将参照本文内容修改application.properties文件内容
 elasticsearch.serverNames = default
 
