--- a/runfiles/config.properties
+++ b/runfiles/config.properties
@@ -1,2 +1,3 @@
 #工具主程序
-mainclass=org.frameworkset.elasticsearch.TestMain
+mainclass=org.frameworkset.elasticsearch.UpdateSetting
+max_result_window=15000
