--- a/build.gradle
+++ b/build.gradle
@@ -146,7 +146,7 @@ configure(allprojects) { project ->
 		)
 
 		api(
-				[group: 'com.bbossgroups', name: 'bboss-rt', version: "${bboss_version}", transitive: false],
+				[group: 'com.bbossgroups', name: 'bboss-bootstrap-rt', version: "${bboss_version}", transitive: true],
 		)
 	}
 
