--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,7 +46,7 @@ dslfile.refreshInterval = -1
 db.name = test
 db.user = root
 db.password = 123456
-db.driver = com.mysql.jdbc.Driver
+db.driver = com.mysql.cj.jdbc.Driver
 db.url = jdbc:mysql://localhost:3306/bboss
 db.usePool = false
 db.validateSQL = select 1
