--- a/build.gradle
+++ b/build.gradle
@@ -145,6 +145,15 @@ configure(allprojects) { project ->
 		api(
 				[group: 'com.bbossgroups', name: 'bboss-bootstrap-rt', version: "${bboss_version}", transitive: true],
 		)
+        api(
+                [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: "${jacksonversion}",transitive: false],
+                [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: "${jacksonversion}",transitive: false],
+                [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "${jacksondatabaindversion}",transitive: false],
+                [group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "${jacksonversion}",transitive: false],
+                [group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: "${jacksondatabaindversion}",transitive: false],
+//                [group: 'org.slf4j', name: 'slf4j-api', version: "1.7.36",transitive: false],
+
+        )
 	}
 
 
