--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,8 @@ PROJ_VERSION=7.3.0
 bboss_version=6.2.7
 bboss_es_version=7.3.0
 log4j2_version=2.24.3
+jacksonversion=2.18.2
+jacksondatabaindversion=2.18.2
 skipTest=true  
 PROJ_WEBSITEURL=http://www.bbossgroups.com
 PROJ_ISSUETRACKERURL=https://github.com/bbossgroups/elasticsearchdemo/issues
