增加Kerberos认证案例

--- a/src/main/resources/application.basic.properties
+++ b/src/main/resources/application.basic.properties
@@ -5,7 +5,8 @@ max_result_window=15000
 elasticsearch.serverNames = default
 
 ##default集群配配置
-
+elasticUser=elastic
+elasticPassword=changeme
 
 #elasticsearch.rest.hostNames=10.1.236.88:9200
 #elasticsearch.rest.hostNames=127.0.0.1:9200
@@ -36,23 +37,6 @@ http.keyPassword =
 # ssl 主机名称校验，是否采用default配置，
 # 如果指定为default，就采用DefaultHostnameVerifier,否则采用 SSLConnectionSocketFactory.ALLOW_ALL_HOSTNAME_VERIFIER
 http.hostnameVerifier =
-
-
-# kerberos安全认证配置
-http.kerberos.principal=elastic/admin@BBOSSGROUPS.COM
-http.kerberos.keytab=C:/environment/es/8.13.2/elasticsearch-8.13.2/config/elastic.keytab
-http.kerberos.krb5Location=C:/environment/es/8.13.2/elasticsearch-8.13.2/config/krb5.conf
-http.kerberos.useTicketCache=false
-#http.kerberos.useKeyTab=true
-
-#Krb5 in GSS API needs to be refreshed so it does not throw the error
-#Specified version of key is not available
-http.kerberos.refreshKrb5Config=true
-
-http.kerberos.storeKey=true
-http.kerberos.doNotPrompt=true
-http.kerberos.isInitiator=true
-http.kerberos.debug=false
 
 # dsl配置文件热加载扫描时间间隔，毫秒为单位，默认5秒扫描一次，<= 0时关闭扫描机制
 dslfile.refreshInterval = -1
