Elasticsearch客户端负载均衡和http-proxy合并，融合http服务负载和AB切换，服务发现和健康检查合并 服务调用 ok 测试 配置加载 ok 测试 健康检查  ok 测试 服务发现处理  ok 测试 华为ES Kerberos首次认证处理与服务发现顺序问题 ok 测试 showTemplate dsl和url地址处理   测试

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ elasticsearch.serverNames = default
 #elasticsearch.rest.hostNames=10.1.236.88:9200
 #elasticsearch.rest.hostNames=127.0.0.1:9200
 #elasticsearch.rest.hostNames=10.21.20.168:9200
-elasticsearch.rest.hostNames=192.168.137.1:9200
+elasticsearch.rest.hostNames=192.168.137.1:8200
 #elasticsearch.rest.hostNames=10.180.211.27:9280,10.180.211.27:9281,10.180.211.27:9282
 elasticsearch.dateFormat=yyyy.MM.dd
 elasticsearch.timeZone=Asia/Shanghai
@@ -39,6 +39,8 @@ http.hostnameVerifier =
 
 
 # kerberos安全认证配置
+http.kerberos.serverRealmPath = /elasticsearch/serverrealm
+http.kerberos.useSubjectCredsOnly=false
 http.kerberos.principal=elastic/admin@BBOSSGROUPS.COM
 http.kerberos.keytab=C:/environment/es/8.13.2/elasticsearch-8.13.2/config/elastic.keytab
 http.kerberos.krb5Location=C:/environment/es/8.13.2/elasticsearch-8.13.2/config/krb5.conf
