--- a/src/main/resources/application.kerberos.serverrealm.properties
+++ b/src/main/resources/application.kerberos.serverrealm.properties
@@ -5,13 +5,12 @@ max_result_window=15000
 elasticsearch.serverNames = default
 
 ##default集群配配置
-elasticUser=elastic
-elasticPassword=changeme
+
 
 #elasticsearch.rest.hostNames=10.1.236.88:9200
 #elasticsearch.rest.hostNames=127.0.0.1:9200
 #elasticsearch.rest.hostNames=10.21.20.168:9200
-elasticsearch.rest.hostNames=192.168.137.1:9200
+elasticsearch.rest.hostNames=192.168.137.1:8200
 #elasticsearch.rest.hostNames=10.180.211.27:9280,10.180.211.27:9281,10.180.211.27:9282
 elasticsearch.dateFormat=yyyy.MM.dd
 elasticsearch.timeZone=Asia/Shanghai
@@ -37,6 +36,25 @@ http.keyPassword =
 # ssl 主机名称校验，是否采用default配置，
 # 如果指定为default，就采用DefaultHostnameVerifier,否则采用 SSLConnectionSocketFactory.ALLOW_ALL_HOSTNAME_VERIFIER
 http.hostnameVerifier =
+
+
+# kerberos安全认证配置
+http.kerberos.serverRealmPath = /elasticsearch/serverrealm
+http.kerberos.useSubjectCredsOnly=false
+http.kerberos.principal=elastic/admin@BBOSSGROUPS.COM
+http.kerberos.keytab=C:/environment/es/8.13.2/elasticsearch-8.13.2/config/elastic.keytab
+http.kerberos.krb5Location=C:/environment/es/8.13.2/elasticsearch-8.13.2/config/krb5.conf
+http.kerberos.useTicketCache=false
+#http.kerberos.useKeyTab=true
+
+#Krb5 in GSS API needs to be refreshed so it does not throw the error
+#Specified version of key is not available
+http.kerberos.refreshKrb5Config=true
+
+http.kerberos.storeKey=true
+http.kerberos.doNotPrompt=true
+http.kerberos.isInitiator=true
+http.kerberos.debug=false
 
 # dsl配置文件热加载扫描时间间隔，毫秒为单位，默认5秒扫描一次，<= 0时关闭扫描机制
 dslfile.refreshInterval = -1
