完善文档和Kerberos认证案例

--- a/src/main/resources/application.kerberos.properties
+++ b/src/main/resources/application.kerberos.properties
@@ -43,6 +43,7 @@ http.kerberos.principal=elastic/admin@BBOSSGROUPS.COM
 http.kerberos.keytab=C:/environment/es/8.13.2/elasticsearch-8.13.2/config/elastic.keytab
 http.kerberos.krb5Location=C:/environment/es/8.13.2/elasticsearch-8.13.2/config/krb5.conf
 http.kerberos.useTicketCache=false
+http.kerberos.loginContextName=ESClient
 #http.kerberos.useKeyTab=true
 
 #Krb5 in GSS API needs to be refreshed so it does not throw the error
