--- a/src/main/resources/application.kerberos.serverrealmjaas.properties
+++ b/src/main/resources/application.kerberos.serverrealmjaas.properties
@@ -44,6 +44,7 @@ http.kerberos.loginConfig=C:/environment/es/8.13.2/elasticsearch-8.13.2/config/j
 http.kerberos.krb5Location=C:/environment/es/8.13.2/elasticsearch-8.13.2/config/krb5.conf
 http.kerberos.debug=false
 http.kerberos.useSubjectCredsOnly=false
+http.kerberos.loginContextName=ESClient
 
 # dsl配置文件热加载扫描时间间隔，毫秒为单位，默认5秒扫描一次，<= 0时关闭扫描机制
 dslfile.refreshInterval = -1
