--- a/src/main/resources/application.kerberos.serverrealm.properties
+++ b/src/main/resources/application.kerberos.serverrealm.properties
@@ -44,6 +44,7 @@ http.kerberos.useSubjectCredsOnly=false
 http.kerberos.principal=elastic/admin@BBOSSGROUPS.COM
 http.kerberos.keytab=C:/environment/es/8.13.2/elasticsearch-8.13.2/config/elastic.keytab
 http.kerberos.krb5Location=C:/environment/es/8.13.2/elasticsearch-8.13.2/config/krb5.conf
+http.kerberos.loginContextName=ESClient
 http.kerberos.useTicketCache=false
 #http.kerberos.useKeyTab=true
 
