--- a/build.gradle
+++ b/build.gradle
@@ -82,10 +82,9 @@ configure(allprojects) { project ->
 	}
 	if(project.getProperty('skipTest').equals("true"))
 	{
-		compileTestJava.enabled=false
-		processTestResources.enabled=false
-		testClasses.enabled = false
-		test.enabled = false
+        tasks.withType(Test) {
+            enabled = false
+        }
 	}
 
 	sourceSets {
@@ -133,10 +132,10 @@ configure(allprojects) { project ->
 		//采用log4j2记录日志
 		api(
 				[group: 'com.bbossgroups', name: 'bboss-persistent', version: "${bboss_version}", transitive: true],
-//			[group: 'org.apache.logging.log4j', name: 'log4j-api', version: "${log4j2_version}", transitive: false],
-	        [group: 'org.apache.logging.log4j', name: 'log4j-core', version: "${log4j2_version}", transitive: true],
-			[group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "${log4j2_version}", transitive: true],
-//				[group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "${log4j2_version}", transitive: true]
+//			[group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4j2_version, transitive: false],
+	        [group: 'org.apache.logging.log4j', name: 'log4j-core', version: log4j2_version, transitive: true],
+			[group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: log4j2_version, transitive: true],
+//				[group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: log4j2_version, transitive: true]
 		)
 		api(
 				[group: 'com.bbossgroups.plugins', name: 'bboss-datatran-jdbc', version: "${bboss_es_version}", transitive: true],
